--- a/Teste-Automatizado/Teste-Automatizado/Teste-Automatizado/Teste-Automatizado.csproj
+++ b/Teste-Automatizado/Teste-Automatizado/Teste-Automatizado/Teste-Automatizado.csproj
@@ -61,6 +61,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Pages\PageDetalhesLeilao.cs" />
     <Compile Include="Pages\PageEditarUsuario.cs" />
     <Compile Include="Pages\PageLeiloes.cs" />
     <Compile Include="Pages\PageNovoLeilao.cs" />
@@ -68,6 +69,7 @@
     <Compile Include="Pages\PageUsuario.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Testes\SystemTestLance.cs" />
     <Compile Include="Testes\SystemTestLeilao.cs" />
     <Compile Include="Testes\SystemTestUsuario.cs" />
   </ItemGroup>
